--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav id="container1">
             <div id="container1a">
                 <div class="mainmenu">
-                 <img class="logo" src="/images/Small Logo AJA.png" alt="This is our logo">
+                 <img class="logo" src="images/Small Logo AJA.png" alt="This is our logo">
                       <ul class="content-1">
                           <li><a href="#homepage">HOME</a></li>
                          <li><a href="#aboutpage">ABOUT</a></li>
