--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                  <div class="frame3"><h2 class="f1">PROJECT 3</h2></div>
              </div>
              <div class="images-below">
-                 <div class="frame4 f1"><h2 class="f1">PROJECT 4</h2></div>
-                 <div class="frame5 f1"><h2 class="f1">PROJECT 5</h2></div>
+                 <div class="frame4"><h2 class="f1">PROJECT 4</h2></div>
+                 <div class="frame5"><h2 class="f1">PROJECT 5</h2></div>
              </div>
             </div>
     </div>
