--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     <div class="profile">
         <!-- <div class="imageborder"> </div> -->
-            <img src="/images/Yen.jpg" alt="This is a portrait image">
+            <img src="images/Yen.jpg" alt="This is a portrait image">
             <div class="profile1">
                 <div class="aboutdetails">
                      <h3 class="name">My name is <span> Julienne Ramos</h3></span>
